--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,9 @@
-<app-title (updateMaxTask)="onUpdateMaxTask($event)">
+
+<!-- <app-title (updateMaxTask)="onUpdateMaxTask($event)">
   <h2>{{title}}</h2>
   <input type="number" #maxNumberOfTasksRef />
-</app-title>
+</app-title> -->
 
-<button routerLink="edit">Edit</button>
-<button routerLink="read">Read</button>
-<a href="edit">Edit</a>
-<a href="read">Read</a>
 
   <!-- <app-list-tasks [maxNumberOfTasks]="maxNumberOfTasks"></app-list-tasks> -->
 
