--- a/src/app/list-tasks/list-tasks.component.html
+++ b/src/app/list-tasks/list-tasks.component.html
@@ -1,3 +1,9 @@
+<button routerLink="/read">Read</button>
+<br>
+<br>
+<br>
+<br>
+
 <div>
 	<h3>List of Tasks </h3>
 	<div *ngFor="let task of tasksService?.tasks">
