3 files modified, 4 added

--- a/src/app/tasks-read-only/tasks-read-only.component.html
+++ b/src/app/tasks-read-only/tasks-read-only.component.html
@@ -11,7 +11,16 @@
 [routerLink]="['/read', 'edit', task.id]"
 [queryParams]="{ editenabled: i%2}"
 [fragment]="'editscreen'+i"
->Edit</button>
+>Edit Here</button>
+	&nbsp;
+	&nbsp;
+	&nbsp;
+	&nbsp;
+
+	<button
+  (click)="navigateEditScrren(task.id)"
+>Edit </button>
+
 </p>
 
 
