--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,9 +1,8 @@
+<div *ngFor="let user of users;let i = index">
+	{{
+    user?.first_name
+  }}
 
-
-
-
-
-<p>
-{{
-firstNames
-}}</p>
+	&nbsp;&nbsp;&nbsp;&nbsp;
+	<button (click)="delete(user.id)">---</button>
+</div>
